--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <li><a href="https://www.globo.com/">Sobre</a></li>
         <li><a href="https://www.uol.com.br/">Lista</a</li>
         <li><a href="https://www.theguardian.com/international">Contato</a></li>
-        <li><a href="https://www.bbc.com/">Help</a></li>
+        <li><a href="https://www.bbc.com/">Ajuda</a></li>
     </ul>
 </nav>
 </body>
