--- a/index.html
+++ b/index.html
@@ -6,18 +6,16 @@
     <title>MenuHorizontal</title>
 </head>
     
-    @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
-
-* {
-
+{
 margin: 0 auto;
 padding: 0;
 box-sizing: border-box;
-font-family: 'playfair display';
+font-family: 'georgia';
 }
-#menu-h{
+
+    #menu-h{
     background-color:rgb(32, 35, 40);
-}
+    }
 
 #menu-h ul{
 max-width: 800px;
