--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ img {
 background-image: url('blackwhite.jpg');
 background-repeat: no-repeat;
         
-        <img src="singer.jpg" style="width:50%;">
+        <img src="singer.png" style="width:50%;">
 
         <nav id="menu-h">
     <ul>
