--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 rel="stylesheet" href="style.css">
 
     <body>
-
+        
+        <img src="singer.png" style="width:50%;">
 
         <nav id="menu-h">
     <ul>
