--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>MenuHorizontal</title>
 </head>
 
-    <link
-rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
     
     <body>
     
