--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="style.css">
     
     <body>
-    
+    background-image: url('blackwhite.jpg');
+background-repeat: no-repeat;
+
     <nav id="menu-h">
     <ul>
         <li><a href="https://edition.cnn.com/">Home</a></li>
