--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <link rel="stylesheet" href="style.css">
     
     <body>
-    background-image: url('blackwhite.jpg');
+<style>
+background-image: url('blackwhite.jpg');
 background-repeat: no-repeat;
+<style/>
 
     <nav id="menu-h">
     <ul>
