--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </nav>
 
   <div id="fundo">
-  <h1 style="color:white; text-align:center;">Rodrigo Corrêa</h1>
+  <h1 style="color:white; text-align:center;">Rodrigo Correia</h1>
   </div>
             
 </body>
