--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </nav>
 
   <div id="fundo">
-  <h1 style="color:yellow; text-align:center;">Rodrigo . Correia</h1>
+  <h1 style="color:red; text-align:center top; font-size:300%;">Rodrigo Correia</h1>
   </div>
             
 </body>
