--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </ul>
 </nav>
 
-  <div id="fundo">
-  <h1 style="color:red; text-align: center; font-size:300%;">Rodrigo Correia</h1>
+  <div id="box">
+  <h1 style="color:red; text-align: center; font-size:300%;">Rodrigo . Correia</h1>
   </div>
             
 </body>
