--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </ul>
 </nav>
 
-  <div id="box">
+  <div class="box">
   <h1 style="color:red; text-align: center; font-size:300%;">Rodrigo . Correia</h1>
   </div>
             
