--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </nav>
 
   <div class="box">
-  <h1 style="color:red; text-align: center; font-size:300%;">Rodrigo . Correia</h1>
+  <h1 style="color:red; text-align: center; font-size:500%;">Rodrigo Correia</h1>
   </div>
             
 </body>
