--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <nav id="menu-h">
     <ul>
-        <li><a href="https://edition.cnn.com/">Home</a></li>
+        <li><a href="https://lucianofmp.github.io/bandaderock/">Home</a></li>
         <li><a href="https://www.globo.com/">Sobre</a></li>
         <li><a href="https://www.uol.com.br/">Lista</a</li>
         <li><a href="https://www.theguardian.com/international">Contato</a></li>
