--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <nav id="menu-h">
     <ul>
         <li><a href="https://lucianofmp.github.io/bandaderock/">Home</a></li>
-        <li><a href="https://www.globo.com/">Sobre</a></li>
-        <li><a href="https://www.uol.com.br/">Lista</a</li>
-        <li><a href="https://www.theguardian.com/international">Contato</a></li>
+        <li><a href="https://lucianofmp.github.io/DuasPgs/index2.html">Autorais</a></li>
+        <li><a href="https://www.youtube.com/@LoranRegis">YouTube</a</li>
+        <li><a href="https://lucianofmp.github.io/meucurriculo/">Contato</a></li>
         <li><a href="https://www.bbc.com/">Ajuda</a></li>
     </ul>
 </nav>
