--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <nav id="menu-h">
     <ul>
-        <li><a href="https://lucianofmp.github.io/bandaderock/">Home</a></li>
+        <li><a href="video.html">Home</a></li>
         <li><a href="https://lucianofmp.github.io/DuasPgs/index2.html">Autorais</a></li>
         <li><a href="https://www.youtube.com/@LoranRegis">YouTube</a</li>
         <li><a href="https://lucianofmp.github.io/meucurriculo/">Contato</a></li>
