--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     <nav id="menu-h">
     <ul>
         <li><a href="video.html">Home</a></li>
-        <li><a href="https://lucianofmp.github.io/DuasPgs/index2.html">Autorais</a></li>
+        <li><a href="autorais.html">Guias</a></li>
         <li><a href="https://www.youtube.com/@LoranRegis">YouTube</a</li>
-        <li><a href="https://lucianofmp.github.io/meucurriculo/">Contato</a></li>
-        <li><a href="https://www.bbc.com/">Ajuda</a></li>
+        <li><a href="spotify.html">Spotify</a></li>
+        <li><a href="curriculo.html">Contato</a></li>
     </ul>
 </nav>
             
