--- a/spotify.html
+++ b/spotify.html
@@ -1,1 +1,18 @@
-<iframe style="border-radius:12px" src="https://open.spotify.com/embed/artist/2TMlbnArb0kxke9WFQMruB?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+<!DOCTYPE html>
+<html>
+<head>
+<style>
+body {
+  background-image: url('guita.jpg');
+  background-repeat: no-repeat;
+  background-attachment: fixed;  
+  background-size: cover;
+}
+</style>
+</head>
+<body>
+<iframe style="border-radius:30px" src="https://open.spotify.com/embed/artist/2TMlbnArb0kxke9WFQMruB?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+
+</body>
+</html>
+
