--- a/autorais.html
+++ b/autorais.html
@@ -34,11 +34,11 @@
     </style>
 </head>
 
-<BODY background="guita.jpg">
+<BODY background="guita.jpg" margin-top: 45px>
     
 <body>
     <div id="header">
-        <h1>Músicas Autorais</h1>
+        <h1>Guias</h1>
     </div>
 
         <div id="main-content">
