--- a/index.html
+++ b/index.html
@@ -1,25 +1,24 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<htmllang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loran Regis</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>MenuHorizontal</title>
 </head>
 
-    <link rel="stylesheet" href="style.css">
-    
-    <body>
+<link
+rel="stylesheet" href="style.css">
 
-    <nav id="menu-h">
-    <ul>
-        <li><a href="video.html">Home</a></li>
-        <li><a href="autorais.html">Guias</a></li>
-        <li><a href="https://www.youtube.com/@LoranRegis">YouTube</a</li>
-        <li><a href="spotify.html">Spotify</a></li>
-        <li><a href="curriculo.html">Contato</a></li>
-    </ul>
+<body>
+
+<nav id="menu-h">
+<ul>
+<li><a href="https://edition.cnn.com/">Home</a></li>
+<li><a href="https://www.globo.com/">Sobre</a></li>
+<li><a href="https://www.uol.com.br/">Lista</a</li>
+<li><a href="https://www.theguardian.com/international">Contato</a></li>
+<li><a href="https://www.bbc.com/">Ajuda</a></li>
+</ul>
 </nav>
-            
 </body>
 </html>
-
