--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@ rel="stylesheet" href="style.css">
 
 <nav id="menu-h">
 <ul>
-<li><a href="https://edition.cnn.com/">Home</a></li>
-<li><a href="https://www.globo.com/">Sobre</a></li>
-<li><a href="https://www.uol.com.br/">Lista</a</li>
-<li><a href="https://www.theguardian.com/international">Contato</a></li>
-<li><a href="https://www.bbc.com/">Ajuda</a></li>
+<li><a href="video.html">Home</a></li>
+<li><a href="autorais.html">Guias</a></li>
+<li><a href="spotify.html">Spotify</a</li>
+<li><a href="https://www.youtube.com/channel/UCpn0Ke2a3GwJyggU177TofQ">YouTube</a></li>
+<li><a href="curriculo.html">Contato</a></li>
 </ul>
 </nav>
 </body>
