--- a/cards.html
+++ b/cards.html
@@ -1,8 +1,13 @@
-<!DOCTYPE html>
-<html lang="pt-br">
+<!DOCTYPEhtml>
+<htmllang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <metacharset="UTF-8">
+    <metahttp-equiv="X-UA-Compatible"content="IE=edge">
+    <metaname="viewport"content="width=device-width, initial-scale=1.0">
+    <linkrel="stylesheet"href="cards.css">
+    <title>Produtos</title>
+</head>
+
 <body>
   <div class="container">
        <div class="product">
