--- a/autorais.html
+++ b/autorais.html
@@ -6,7 +6,7 @@
         body {
             font-family: Georgia, serif;
             background-color: #f0f0f0;
-            margin-top: 20px;
+            margin: 0;
             padding: 0;
         }
 
