--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
 <title>Loran Regis</title>
 </head>
 
-<link
-rel="stylesheet" href="style.css">
+<linkrel="stylesheet" href="style.css">
 
 <body>
 
