--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <ul>
 <li><a href="video.html">Home</a></li>
 <li><a href="autorais.html">Guias</a></li>
+<li><a href="cards.html">Produtos</a></li>
 <li><a href="spotify.html">Spotify</a</li>
 <li><a href="https://www.youtube.com/channel/UCpn0Ke2a3GwJyggU177TofQ">YouTube</a></li>
 <li><a href="curriculo.html">Contato</a></li>
