--- a/curriculo.html
+++ b/curriculo.html
@@ -62,7 +62,7 @@
 
         <br>
         <h2>Portfólio</h2>
-        <a href="https://lucianofmp.github.io/musicasautorais/">Clique para ouvir músicas autorais</a>
+        <a href="autorais.html">Clique para ouvir músicas autorais</a>
         
         
     </div>
