--- a/autorais.html
+++ b/autorais.html
@@ -1,7 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Músicas Autorais</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Guias</title>
+</head>
+
+<link rel="stylesheet" href="style.css">
+
+<body>
+
+<nav id="menu-h">
+<ul>
+<li><a href="video.html">Home</a></li>
+<li><a href="autorais.html">Guias</a></li>
+<li><a href="cards.html">Produtos</a></li>
+<li><a href="spotify.html">Spotify</a</li>
+<li><a href="https://www.youtube.com/channel/UCpn0Ke2a3GwJyggU177TofQ">YouTube</a></li>
+<li><a href="curriculo.html">Contato</a></li>
+</ul>
+</nav>
+
+    
     <style>
         body {
             font-family: Georgia, serif;
