--- a/curriculo.html
+++ b/curriculo.html
@@ -2,6 +2,22 @@
 <html>
 <head>
     <title>Currículo</title>
+
+    <link rel="stylesheet" href="style.css">
+
+<body>
+
+<nav id="menu-h">
+<ul>
+<li><a href="video.html">Home</a></li>
+<li><a href="autorais.html">Guias</a></li>
+<li><a href="cards.html">Produtos</a></li>
+<li><a href="spotify.html">Spotify</a</li>
+<li><a href="https://www.youtube.com/channel/UCpn0Ke2a3GwJyggU177TofQ">YouTube</a></li>
+<li><a href="curriculo.html">Contato</a></li>
+</ul>
+</nav>
+    
     <style>
         body {
             font-family: Georgia, serif;
