--- a/curriculo.html
+++ b/curriculo.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
-<html>
+<htmllang="pt-br">
 <head>
-    <title>Currículo</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Loran Regis</title>
+</head>
 
     <link rel="stylesheet" href="style.css">
 
