--- a/cards.html
+++ b/cards.html
@@ -1,13 +1,28 @@
 <!DOCTYPEhtml>
-<htmllang="en">
+<htmllang="pt-br">
 <head>
-    <metacharset="UTF-8">
-    <metahttp-equiv="X-UA-Compatible"content="IE=edge">
-    <metaname="viewport"content="width=device-width, initial-scale=1.0">
-    <linkrel="stylesheet"href="cards.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="cards.css">
     <title>Produtos</title>
 </head>
 
+    <link rel="stylesheet" href="style.css">
+
+<body>
+
+<nav id="menu-h">
+<ul>
+<li><a href="video.html">Home</a></li>
+<li><a href="autorais.html">Guias</a></li>
+<li><a href="cards.html">Produtos</a></li>
+<li><a href="spotify.html">Spotify</a</li>
+<li><a href="https://www.youtube.com/channel/UCpn0Ke2a3GwJyggU177TofQ">YouTube</a></li>
+<li><a href="curriculo.html">Contato</a></li>
+</ul>
+</nav>
+        
 <body>
   <div class="container">
        <div class="product">
