--- a/spotify.html
+++ b/spotify.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+  <link rel="stylesheet" href="style.css">
+
+<body>
+
+<nav id="menu-h">
+<ul>
+<li><a href="video.html">Home</a></li>
+<li><a href="autorais.html">Guias</a></li>
+<li><a href="cards.html">Produtos</a></li>
+<li><a href="spotify.html">Spotify</a</li>
+<li><a href="https://www.youtube.com/channel/UCpn0Ke2a3GwJyggU177TofQ">YouTube</a></li>
+<li><a href="curriculo.html">Contato</a></li>
+</ul>
+</nav>
+
 <style>
 body {
   background-image: url('guita.jpg');
