--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Loran Regis</title>
+  <base target="_blank">
 </head>
 
 <link rel="stylesheet" href="style.css">
