--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Loran Regis</title>
-  <base target="_blank">
-</head>
+  </head>
 
 <link rel="stylesheet" href="style.css">
 
@@ -17,7 +16,7 @@
 <li><a href="autorais.html">Guias</a></li>
 <li><a href="cards.html">Produtos</a></li>
 <li><a href="spotify.html">Spotify</a</li>
-<li><a href="https://www.youtube.com/channel/UCpn0Ke2a3GwJyggU177TofQ">YouTube</a></li>
+<li><a href="https://www.youtube.com/channel/UCpn0Ke2a3GwJyggU177TofQ" base target="_blank">YouTube</a></li>
 <li><a href="curriculo.html">Contato</a></li>
 </ul>
 </nav>
