--- a/spotify.html
+++ b/spotify.html
@@ -31,7 +31,7 @@ body {
 </style>
 </head>
 <body>
-<iframe style="border-radius:30px" src="https://open.spotify.com/embed/artist/2TMlbnArb0kxke9WFQMruB?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+<iframe style="border-radius:30px" src="https://open.spotify.com/embed/artist/2TMlbnArb0kxke9WFQMruB?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture" loading="lazy"></iframe>
 
 </body>
 </html>
