--- a/curriculo.html
+++ b/curriculo.html
@@ -64,7 +64,7 @@
         <h2>Dados Pessoais</h2>
         <img id="profile-image" src="loran1.png" alt="Foto de Perfil">
         <p>Nome: Loran Regis</p>
-        <p>E-mail: luciano.neto@fmpsc.edu.br</p>
+        <p>E-mail: luciano.neto@aluno.fmpsc.edu.br</p>
         <p>Telefone: (48) 99972-2999</p>
 
         <br>
@@ -81,7 +81,7 @@
 
         <br>
         <h2>Portfólio</h2>
-        <a href="autorais.html">Clique para ouvir músicas autorais</a>
+        <a href="autorais.html">Clique para ouvir os últimos lançamentos</a>
         
         
     </div>
