--- a/autorais.html
+++ b/autorais.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Guias</title>
+<title>Lançamentos</title>
 </head>
 
 <link rel="stylesheet" href="style.css">
@@ -58,7 +58,7 @@
     
 <body>
     <div id="header">
-        <h1>Guias</h1>
+        <h1>Lançamentos</h1>
     </div>
 
         <div id="main-content">
