--- a/index.html
+++ b/index.html
@@ -2,12 +2,25 @@
 <htmllang="pt-br">
 <head>
 <meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Loran Regis</title>
   </head>
 
 <link rel="stylesheet" href="style.css">
+<style>
 
+  body {
+
+background-image: url(backrockgif.gif);
+background-repeat: no-repeat;
+background-attachment: fixed;  
+background-size: cover;
+
+}
+  
+</style>
+  
 <body>
 
 <nav id="menu-h">
