--- a/cards.html
+++ b/cards.html
@@ -15,10 +15,11 @@
 <nav id="menu-h">
 <ul>
 <li><a href="video.html">Home</a></li>
-<li><a href="autorais.html">Guias</a></li>
-<li><a href="cards.html">Produtos</a></li>
-<li><a href="spotify.html">Spotify</a</li>
-<li><a href="https://www.youtube.com/channel/UCpn0Ke2a3GwJyggU177TofQ">YouTube</a></li>
+<li><a href="curriculo.html">Sobre</a></li>
+<li><a href="autorais.html">Lançamentos</a></li>
+<li><a href="cards.html">Loja</a></li>
+<li><a href="https://open.spotify.com/intl-pt/artist/2TMlbnArb0kxke9WFQMruB">Spotify</a</li>
+<li><a href="https://www.youtube.com/channel/UCpn0Ke2a3GwJyggU177TofQ" base target="_blank">YouTube</a></li>
 <li><a href="curriculo.html">Contato</a></li>
 </ul>
 </nav>
