--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ background-size: cover;
 
 <nav id="menu-h">
 <ul>
-<li><a href="video.html">Home</a></li>
+<li><a href="index.html">Home</a></li>
 <li><a href="curriculo.html">Sobre</a></li>
 <li><a href="autorais.html">Lançamentos</a></li>
 <li><a href="cards.html">Loja</a></li>
