--- a/cards.html
+++ b/cards.html
@@ -14,7 +14,7 @@
 
 <nav id="menu-h">
 <ul>
-<li><a href="video.html">Home</a></li>
+<li><a href="index.html">Home</a></li>
 <li><a href="curriculo.html">Sobre</a></li>
 <li><a href="autorais.html">Lançamentos</a></li>
 <li><a href="cards.html">Loja</a></li>
