--- a/cards.html
+++ b/cards.html
@@ -31,10 +31,10 @@
                <img class="product-image" src="loran1.png" alt="">
            </div>
            <div class="color">
-               <span class="orange active" data-image="loran1.png" data-color="#DE522F"></span>
-               <span class="green" data-image="loran2.png" data-color="#9ABE62"></span>
-               <span class="black" data-image="loran3.png" data-color="#222627"></span>
-               <span class="red" data-image="loran4.png" data-color="#B41D26"></span>
+               <span class="orange active" data-image="l1.png" data-color="#DE522F"></span>
+               <span class="green" data-image="l2.png" data-color="#9ABE62"></span>
+               <span class="black" data-image="l3.png" data-color="#222627"></span>
+               <span class="red" data-image="l4.png" data-color="#B41D26"></span>
            </div>
            <div class="title">
                Álbuns
