--- a/cards.html
+++ b/cards.html
@@ -31,13 +31,13 @@
                <img class="product-image" src="loran1.png" alt="">
            </div>
            <div class="color">
-               <span class="orange active" data-image="l1.png" data-color="#DE522F"></span>
-               <span class="green" data-image="l2.png" data-color="#9ABE62"></span>
-               <span class="black" data-image="l3.png" data-color="#222627"></span>
-               <span class="red" data-image="l4.png" data-color="#B41D26"></span>
+               <span class="orange active" data-image="l1.png" data-color="#FFDEAD"></span>
+               <span class="green" data-image="l2.png" data-color="#008B8B"></span>
+               <span class="black" data-image="l3.png" data-color="#483D8B"></span>
+               <span class="red" data-image="l4.png" data-color="#DC143C"></span>
            </div>
            <div class="title">
-               Álbuns
+               Camiseta Preta
            </div>   
            <div class="detail">
                <p>Valor: <span>R$ 50</span></p>
