--- a/homecards.html
+++ b/homecards.html
@@ -1,13 +1,63 @@
 <!DOCTYPE html>
 <html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+body {
+  font-family: Arial;
+  color: white;
+}
+
+.split {
+  height: 100%;
+  width: 50%;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  overflow-x: hidden;
+  padding-top: 20px;
+}
+
+.left {
+  left: 0;
+  background-color: #111;
+}
+
+.right {
+  right: 0;
+  background-color: rgb(31, 3, 96);
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+
+.centered img {
+  width: 200px;
+  border-radius: 80%;
+}
+</style>
+</head>
 <body>
 
+<div class="split left">
+  <div class="centered">
+    <img src="l4.png">
+    <h2 href="cards.html">Canecas</h2>
+    
+  </div>
+</div>
 
-<iframe src="camisetas.html" name="iframe_a" height="350px" width="100%" title="Iframe Example"></iframe>
-
-
-<iframe src="camisetas.html" name="iframe_a" height="350px" width="100%" title="Iframe Example"></iframe>
-
-
+<div class="split right">
+  <div class="centered">
+    <img src="l1.png">
+    <h2 href="cards.html">Camisetas</h2>
+      </div>
+</div>
+     
 </body>
-</html>
+</html> 
