--- a/cards.html
+++ b/cards.html
@@ -28,10 +28,10 @@
   <div class="container">
        <div class="product">
            <div class="image">
-               <img class="product-image" src="loran1.png" alt="">
+               <img class="product-image" src="l1.png" alt="">
            </div>
            <div class="color">
-               <span class="orange active" data-image="l1.png" data-color="#FFDEAD"></span>
+               <span class="orange active" data-image="l1.png" data-color="#BC8F8F"></span>
                <span class="green" data-image="l2.png" data-color="#008B8B"></span>
                <span class="black" data-image="l3.png" data-color="#483D8B"></span>
                <span class="red" data-image="l4.png" data-color="#DC143C"></span>
