--- a/cards.html
+++ b/cards.html
@@ -17,7 +17,7 @@
 <li><a href="index.html">Home</a></li>
 <li><a href="curriculo.html">Sobre</a></li>
 <li><a href="autorais.html">Lançamentos</a></li>
-<li><a href="cards.html">Loja</a></li>
+<li><a href="homecards.html">Loja</a></li>
 <li><a href="https://open.spotify.com/intl-pt/artist/2TMlbnArb0kxke9WFQMruB">Spotify</a</li>
 <li><a href="https://www.youtube.com/channel/UCpn0Ke2a3GwJyggU177TofQ" base target="_blank">YouTube</a></li>
 <li><a href="curriculo.html">Contato</a></li>
