--- a/homecards.html
+++ b/homecards.html
@@ -4,6 +4,21 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="style.css">
+
+  <body>
+
+<nav id="menu-h">
+<ul>
+<li><a href="index.html">Home</a></li>
+<li><a href="curriculo.html">Sobre</a></li>
+<li><a href="autorais.html">Lançamentos</a></li>
+<li><a href="homecards.html">Loja</a></li>
+<li><a href="https://open.spotify.com/intl-pt/artist/2TMlbnArb0kxke9WFQMruB">Spotify</a</li>
+<li><a href="https://www.youtube.com/channel/UCpn0Ke2a3GwJyggU177TofQ" base target="_blank">YouTube</a></li>
+<li><a href="curriculo.html">Contato</a></li>
+</ul>
+</nav>
+</body>
   
 <style>
 body {
