--- a/cards.html
+++ b/cards.html
@@ -28,7 +28,7 @@
   <div class="container">
        <div class="product">
            <div class="image">
-               <img class="product-image" src="l1.png" alt="">
+               <img class="product-image" src="l1.png">
            </div>
            <div class="color">
                <span class="orange active" data-image="l1.png" data-color="#BC8F8F"></span>
