--- a/cards.html
+++ b/cards.html
@@ -4,31 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="cards.css">
+    <link rel="stylesheet" href="camisetas.css">
     <title>Produtos</title>
 </head>
 
-    <link rel="stylesheet" href="style.css">
-
-<body>
-
-<nav id="menu-h">
-<ul>
-<li><a href="index.html">Home</a></li>
-<li><a href="curriculo.html">Sobre</a></li>
-<li><a href="autorais.html">Lançamentos</a></li>
-<li><a href="homecards.html">Loja</a></li>
-<li><a href="https://open.spotify.com/intl-pt/artist/2TMlbnArb0kxke9WFQMruB">Spotify</a</li>
-<li><a href="https://www.youtube.com/channel/UCpn0Ke2a3GwJyggU177TofQ" base target="_blank">YouTube</a></li>
-<li><a href="curriculo.html">Contato</a></li>
-</ul>
-</nav>
-        
+         
 <body>
   <div class="container">
        <div class="product">
            <div class="image">
-               <img class="product-image" src="l1.png">
+               <img class="product-image" src="l1.png" alt="">
            </div>
            <div class="color">
                <span class="orange active" data-image="l1.png" data-color="#BC8F8F"></span>
