--- a/homecards.html
+++ b/homecards.html
@@ -74,7 +74,7 @@ body {
 
         <div class="split left">
   <div class="centered">
-            <a href="camisetas.html"> <img src="l4.png"></a>
+            <a href="canecas.html"> <img src="l4.png"></a>
     <button class="button" onclick="document.location='cards.html'">Canecas</button> 
   </div>
 </div>
