--- a/homecards.html
+++ b/homecards.html
@@ -75,14 +75,14 @@ body {
         <div class="split left">
   <div class="centered">
             <a href="canecas.html"> <img src="l4.png"></a>
-    <button class="button" onclick="document.location='cards.html'">Canecas</button> 
+    <button class="button" onclick="document.location='canecas.html'">Canecas</button> 
   </div>
 </div>
 
 <div class="split right">
   <div class="centered">
         <a href="camisetas.html"> <img src="l1.png"></a>
-            <button class="button" onclick="document.location='cards.html'">Camisetas</button> 
+            <button class="button" onclick="document.location='camisetas.html'">Camisetas</button> 
           </div>
 </div>
      
