--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@ background-size: cover;
 <nav id="menu-h">
 <ul>
 <li><a href="index.html">Home</a></li>
-<li><a href="curriculo.html">Sobre</a></li>
+<li><a href="sobre.html">Sobre</a></li>
 <li><a href="autorais.html">Lançamentos</a></li>
 <li><a href="homecards.html">Loja</a></li>
 <li><a href="https://open.spotify.com/intl-pt/artist/2TMlbnArb0kxke9WFQMruB">Spotify</a</li>
 <li><a href="https://www.youtube.com/channel/UCpn0Ke2a3GwJyggU177TofQ" base target="_blank">YouTube</a></li>
-<li><a href="curriculo.html">Contato</a></li>
+<li><a href="contato.html">Contato</a></li>
 </ul>
 </nav>
 </body>
