--- a/autorais.html
+++ b/autorais.html
@@ -37,25 +37,25 @@
 <BODY background="guita.jpg" margin-top: 45px>
     
         
-        <h2 style="color:white;">Raia Sol</h2>
+        <h2 style="color:white; align:center">Raia Sol</h2>
       <audio controls>
   <source src="raiasol.mp4" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
 
-        <h2 style="color:white;">Querer</h2>
+        <h2 style="color:white; align:center;">Querer</h2>
       <audio controls>
   <source src="querer.mp4" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
 
-        <h2 style="color:white;">Não Vou Deixar de Ser Eu</h2>
+        <h2 style="color:white; align:center;">Não Vou Deixar de Ser Eu</h2>
       <audio controls>
   <source src="naovoudeixar.mp4" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
 
-        <h2 style="color:white;">Faz Acontecer</h2>
+        <h2 style="color:white; align:center;">Faz Acontecer</h2>
       <audio controls>
   <source src="fazacontecer.mp4" type="audio/mpeg">
 Your browser does not support the audio element.
