--- a/autorais.html
+++ b/autorais.html
@@ -30,8 +30,9 @@
             margin: 0;
             padding: 0;
         }
-
-       
+h1 {
+        text-align: center;
+}   
     </style>
 
 <BODY background="guita.jpg" margin-top: 45px>
