--- a/homecards.html
+++ b/homecards.html
@@ -16,6 +16,7 @@
         <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="sobre.html">Sobre</a></li>
+        <li><a href="galeria.html">Galeria</a></li>
         <li><a href="autorais.html">Lançamentos</a></li>
         <li><a href="cards.html">Loja</a></li>
         <li><a href="https://open.spotify.com/intl-pt/artist/2TMlbnArb0kxke9WFQMruB">Spotify</a</li>
