--- a/autorais.html
+++ b/autorais.html
@@ -40,25 +40,33 @@
 <BODY background="guita.jpg" margin-top: 45px>
     
         <div id="main-content">
-
+<div>
             <h2 style="color:white; align:center">Raia Sol</h2>
       <audio controls>
   <source src="raiasol.mp4" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
-<br>
+</div>div>
+    <br>
+        </br>
+            <div>
         <h2 style="color:white; align:center;">Querer</h2>
       <audio controls>
   <source src="querer.mp4" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
+                <div>
 <br>
-        <h2 style="color:white; align:center;">Não Vou Deixar de Ser Eu</h2>
+                </br>
+        <div>
+            <h2 style="color:white; align:center;">Não Vou Deixar de Ser Eu</h2>
       <audio controls>
   <source src="naovoudeixar.mp4" type="audio/mpeg">
 Your browser does not support the audio element.
 </audio>
+        </div>
 <br>
+                </br>
         <h2 style="color:white; align:center;">Faz Acontecer</h2>
       <audio controls>
   <source src="fazacontecer.mp4" type="audio/mpeg">
