--- a/contato.html
+++ b/contato.html
@@ -62,7 +62,7 @@
 
     <div>
         
-        <image src="lorancontato.png" width="1520" height="1000"></image>
+        <image src="lorancontato1.png" width="1520" height="1000"></image>
         
     </div>
 
